# lvgl

./: .buildinfo  .clang-format  .codecov.yml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  0001-fix-freertos-Do-not-reinitialize-the-mutex-condition.patch  0002-feat-draw_unit-Add-unit_count-to-figure-out-if-other.patch  CHANGELOG.html  CHANGELOG.md  CHANGELOG_GFX.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_STYLE.html  CONTRIBUTING.html  CONTRIBUTING.md  COPYRIGHTS.md  Dockerfile  Kconfig  LVGL.lvgl.pdsc  Makefile  README.astyle  README.md  READMEEX.md  READMEEX.txt  README_NemaGFX.md  README_zh.md  ROADMAP.html  SConscript  TODO_MAJOR.md  TODO_MINOR.md  TODO_PATCH.md  a.patch  a.txt  ai_example_gen_guide.md  astyle_c  astyle_h  (+45 more)
demos/: CMakeLists.txt  Kconfig  README.md  lv_demos.c  lv_demos.h  lv_demos.mk
demos/benchmark/: CMakeLists.txt  Kconfig  README.md  lv_demo_benchmark.c  lv_demo_benchmark.h
demos/ebike/: CMakeLists.txt  lv_demo_ebike.c  lv_demo_ebike.h  lv_demo_ebike_home.c  lv_demo_ebike_private.h  lv_demo_ebike_settings.c  lv_demo_ebike_settings.h  lv_demo_ebike_stats.c  lv_demo_ebike_stats.h
demos/flex_layout/: CMakeLists.txt  lv_demo_flex_layout.h  lv_demo_flex_layout_ctrl_pad.c  lv_demo_flex_layout_flex_loader.c  lv_demo_flex_layout_main.c  lv_demo_flex_layout_main.h  lv_demo_flex_layout_view.c  lv_demo_flex_layout_view_child_node.c  lv_demo_flex_layout_view_ctrl_pad.c
demos/gestures/: lv_demo_gestures.c  lv_demo_gestures.h
demos/gltf/: Kconfig  lv_demo_gltf.c  lv_demo_gltf.h  lv_demo_nanovg_3d.c  lv_demo_nanovg_3d.h
demos/high_res/: CMakeLists.txt  lv_demo_high_res.c  lv_demo_high_res.h  lv_demo_high_res_api_example.c  lv_demo_high_res_app_about.c  lv_demo_high_res_app_ev_charging.c  lv_demo_high_res_app_security.c  lv_demo_high_res_app_smart_home.c  lv_demo_high_res_app_smart_meter.c  lv_demo_high_res_app_thermostat.c  lv_demo_high_res_home.c  lv_demo_high_res_private.h  lv_demo_high_res_top_margin.c  lv_demo_high_res_util.c
demos/keypad_encoder/: CMakeLists.txt  Kconfig  README.md  lv_demo_keypad_encoder.c  lv_demo_keypad_encoder.h  lv_demo_keypad_encoder.py
demos/layout_previewer/: lv_demo_layout_previewer.h  lv_demo_layout_previewer_ctrl_pad.c  lv_demo_layout_previewer_flex_loader.c  lv_demo_layout_previewer_main.c  lv_demo_layout_previewer_main.h  lv_demo_layout_previewer_view.c  lv_demo_layout_previewer_view_child_node.c  lv_demo_layout_previewer_view_ctrl_pad.c
demos/multilang/: CMakeLists.txt  lv_demo_multilang.c  lv_demo_multilang.h
demos/music/: CMakeLists.txt  Kconfig  README.md  lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_list.h  lv_demo_music_main.c  lv_demo_music_main.h
demos/render/: CMakeLists.txt  Kconfig  README.md  lv_demo_render.c  lv_demo_render.h
demos/scroll/: CMakeLists.txt  lv_demo_scroll.c  lv_demo_scroll.h
demos/smartwatch/: CMakeLists.txt  lv_demo_smartwatch.c  lv_demo_smartwatch.h  lv_demo_smartwatch_control.c  lv_demo_smartwatch_control.h  lv_demo_smartwatch_easter_egg.c  lv_demo_smartwatch_easter_egg.h  lv_demo_smartwatch_health.c  lv_demo_smartwatch_health.h  lv_demo_smartwatch_home.c  lv_demo_smartwatch_home.h  lv_demo_smartwatch_list.c  lv_demo_smartwatch_list.h  lv_demo_smartwatch_music.c  lv_demo_smartwatch_music.h  lv_demo_smartwatch_notifications.c  lv_demo_smartwatch_notifications.h  lv_demo_smartwatch_private.h  lv_demo_smartwatch_qr.c  lv_demo_smartwatch_qr.h  lv_demo_smartwatch_settings.c  lv_demo_smartwatch_settings.h  lv_demo_smartwatch_sports.c  lv_demo_smartwatch_sports.h  lv_demo_smartwatch_weather.c  lv_demo_smartwatch_weather.h
demos/stress/: CMakeLists.txt  Kconfig  README.md  lv_demo_stress.c  lv_demo_stress.h
demos/svg/: lv_demo_svg.c  lv_demo_svg.h
demos/transform/: CMakeLists.txt  lv_demo_transform.c  lv_demo_transform.h
demos/vector_dodger/: lv_demo_vector_dodger.c  lv_demo_vector_dodger.h
demos/vector_graphic/: CMakeLists.txt  Kconfig  lv_demo_vector_graphic.c  lv_demo_vector_graphic.h
demos/widgets/: CMakeLists.txt  Kconfig  lv_demo_widgets.c  lv_demo_widgets.h  lv_demo_widgets.py  lv_demo_widgets_analytics.c  lv_demo_widgets_analytics.h  lv_demo_widgets_components.c  lv_demo_widgets_components.h  lv_demo_widgets_profile.c  lv_demo_widgets_profile.h  lv_demo_widgets_shop.c  lv_demo_widgets_shop.h
scripts/gdb/: .gitignore  README.md  gdbinit.py  lvgl.py  pyproject.toml  requirements.txt
src/: CMakeLists.txt  a.patch  c_file_list.txt  dave2d.patch  demos  lv_api_map.h  lv_api_map_v8.h  lv_api_map_v9_0.h  lv_api_map_v9_1.h  lv_api_map_v9_2.h  lv_api_map_v9_3.h  lv_api_map_v9_4.h  lv_api_map_v9_5.h  lv_conf.h  lv_conf_checker.h  lv_conf_internal.h  lv_conf_kconfig.h  lv_conf_templ.h  lv_conf_zephyr.h  lv_init.c  lv_init.h  lv_public_api.h  lv_version.h  lvgl.h  lvgl_private.h  lvgl_public.h
src/core/: CMakeLists.txt  Kconfig  lv_core.mk  lv_disp.c  lv_disp.h  lv_disp_priv.h  lv_disp_private.h  lv_event.c  lv_event.h  lv_global.h  lv_group.c  lv_group.h  lv_group_private.h  lv_indev.c  lv_indev.h  lv_indev_priv.h  lv_indev_private.h  lv_indev_scroll.c  lv_indev_scroll.h  lv_obj.c  lv_obj.h  lv_obj_class.c  lv_obj_class.h  lv_obj_class_private.h  lv_obj_draw.c  lv_obj_draw.h  lv_obj_draw_cache.c  lv_obj_draw_cache.h  lv_obj_draw_private.h  lv_obj_event.c  lv_obj_event.h  (+26 more)
test_fix/: CMakeLists.txt  lv_conf.h  main.c
tests/: .gitignore  CMakeLists.txt  Dockerfile  FindLibDRM.cmake  Makefile  README.md  agent.md  benchmark_emu.py  build.py  config.yml  defines.py  lsan-egl.supp  lsan-nanovg.supp  lv_test_assert.c  lv_test_assert.h  lv_test_conf.h  lv_test_init.c  lv_test_init.h  lv_test_main.c  main.py  perf.py  perf_main.py  screenshot.raw  test.py  test_main.c  test_obj_tree.c
zephyr/: CMakeLists.txt  Kconfig  Kconfig.graphical  Kconfig.input  Kconfig.memory  Kconfig.shell  lv_conf.h  lvgl.c  lvgl_display.c  lvgl_display.h  lvgl_display_16bit.c  lvgl_display_24bit.c  lvgl_display_32bit.c  lvgl_display_mono.c  lvgl_fs.c  lvgl_fs.h  lvgl_mem.c  lvgl_mem.h  lvgl_mem_kernel.c  lvgl_shell.c  module.yml
(+10035 files in other folders)
