_lvgl_path = get_path_info("../lvgl", "abspath")

lvgl_sources = [
    "$_lvgl_path/src/core/lv_disp.c",
    "$_lvgl_path/src/core/lv_event.c",
    "$_lvgl_path/src/core/lv_group.c",
    "$_lvgl_path/src/core/lv_indev.c",
    "$_lvgl_path/src/core/lv_indev_scroll.c",
    "$_lvgl_path/src/core/lv_obj.c",
    "$_lvgl_path/src/core/lv_obj_class.c",
    "$_lvgl_path/src/core/lv_obj_draw.c",
    "$_lvgl_path/src/core/lv_obj_pos.c",
    "$_lvgl_path/src/core/lv_obj_scroll.c",
    "$_lvgl_path/src/core/lv_obj_style.c",
    "$_lvgl_path/src/core/lv_obj_style_gen.c",
    "$_lvgl_path/src/core/lv_obj_tree.c",
    "$_lvgl_path/src/core/lv_refr.c",
    "$_lvgl_path/src/core/lv_theme.c",
    "$_lvgl_path/src/draw/lv_draw.c",
    "$_lvgl_path/src/draw/lv_draw_arc.c",
    "$_lvgl_path/src/draw/lv_draw_img.c",
    "$_lvgl_path/src/draw/lv_draw_label.c",
    "$_lvgl_path/src/draw/lv_draw_line.c",
    "$_lvgl_path/src/draw/lv_draw_mask.c",
    "$_lvgl_path/src/draw/lv_draw_rect.c",
    "$_lvgl_path/src/draw/lv_draw_triangle.c",
    "$_lvgl_path/src/draw/lv_img_buf.c",
    "$_lvgl_path/src/draw/lv_img_cache.c",
    "$_lvgl_path/src/draw/lv_img_decoder.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_arc.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_blend.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_dither.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_gradient.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_img.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_letter.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_line.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_polygon.c",
    "$_lvgl_path/src/draw/sw/lv_draw_sw_rect.c",
    "$_lvgl_path/src/font/lv_font.c",
    "$_lvgl_path/src/font/lv_font_dejavu_16_persian_hebrew.c",
    "$_lvgl_path/src/font/lv_font_fmt_txt.c",
    "$_lvgl_path/src/font/lv_font_loader.c",
    "$_lvgl_path/src/font/lv_font_montserrat_10.c",
    "$_lvgl_path/src/font/lv_font_montserrat_12.c",
    "$_lvgl_path/src/font/lv_font_montserrat_12_subpx.c",
    "$_lvgl_path/src/font/lv_font_montserrat_14.c",
    "$_lvgl_path/src/font/lv_font_montserrat_16.c",
    "$_lvgl_path/src/font/lv_font_montserrat_18.c",
    "$_lvgl_path/src/font/lv_font_montserrat_20.c",
    "$_lvgl_path/src/font/lv_font_montserrat_22.c",
    "$_lvgl_path/src/font/lv_font_montserrat_24.c",
    "$_lvgl_path/src/font/lv_font_montserrat_26.c",
    "$_lvgl_path/src/font/lv_font_montserrat_28.c",
    "$_lvgl_path/src/font/lv_font_montserrat_28_compressed.c",
    "$_lvgl_path/src/font/lv_font_montserrat_30.c",
    "$_lvgl_path/src/font/lv_font_montserrat_32.c",
    "$_lvgl_path/src/font/lv_font_montserrat_34.c",
    "$_lvgl_path/src/font/lv_font_montserrat_36.c",
    "$_lvgl_path/src/font/lv_font_montserrat_38.c",
    "$_lvgl_path/src/font/lv_font_montserrat_40.c",
    "$_lvgl_path/src/font/lv_font_montserrat_42.c",
    "$_lvgl_path/src/font/lv_font_montserrat_44.c",
    "$_lvgl_path/src/font/lv_font_montserrat_46.c",
    "$_lvgl_path/src/font/lv_font_montserrat_48.c",
    "$_lvgl_path/src/font/lv_font_montserrat_8.c",
    "$_lvgl_path/src/font/lv_font_simsun_16_cjk.c",
    "$_lvgl_path/src/font/lv_font_unscii_16.c",
    "$_lvgl_path/src/font/lv_font_unscii_8.c",
    "$_lvgl_path/src/hal/lv_hal_disp.c",
    "$_lvgl_path/src/hal/lv_hal_indev.c",
    "$_lvgl_path/src/hal/lv_hal_tick.c",
    "$_lvgl_path/src/misc/lv_anim.c",
    "$_lvgl_path/src/misc/lv_anim_timeline.c",
    "$_lvgl_path/src/misc/lv_area.c",
    "$_lvgl_path/src/misc/lv_async.c",
    "$_lvgl_path/src/misc/lv_bidi.c",
    "$_lvgl_path/src/misc/lv_color.c",
    "$_lvgl_path/src/misc/lv_fs.c",
    "$_lvgl_path/src/misc/lv_gc.c",
    "$_lvgl_path/src/misc/lv_ll.c",
    "$_lvgl_path/src/misc/lv_log.c",
    "$_lvgl_path/src/misc/lv_lru.c",
    "$_lvgl_path/src/misc/lv_math.c",
    "$_lvgl_path/src/misc/lv_mem.c",
    "$_lvgl_path/src/misc/lv_printf.c",
    "$_lvgl_path/src/misc/lv_style.c",
    "$_lvgl_path/src/misc/lv_style_gen.c",
    "$_lvgl_path/src/misc/lv_templ.c",
    "$_lvgl_path/src/misc/lv_timer.c",
    "$_lvgl_path/src/misc/lv_tlsf.c",
    "$_lvgl_path/src/misc/lv_txt.c",
    "$_lvgl_path/src/misc/lv_txt_ap.c",
    "$_lvgl_path/src/misc/lv_utils.c",
    "$_lvgl_path/src/widgets/lv_arc.c",
    "$_lvgl_path/src/widgets/lv_bar.c",
    "$_lvgl_path/src/widgets/lv_btn.c",
    "$_lvgl_path/src/widgets/lv_btnmatrix.c",
    "$_lvgl_path/src/widgets/lv_canvas.c",
    "$_lvgl_path/src/widgets/lv_checkbox.c",
    "$_lvgl_path/src/widgets/lv_dropdown.c",
    "$_lvgl_path/src/widgets/lv_img.c",
    "$_lvgl_path/src/widgets/lv_label.c",
    "$_lvgl_path/src/widgets/lv_line.c",
    "$_lvgl_path/src/widgets/lv_objx_templ.c",
    "$_lvgl_path/src/widgets/lv_roller.c",
    "$_lvgl_path/src/widgets/lv_slider.c",
    "$_lvgl_path/src/widgets/lv_switch.c",
    "$_lvgl_path/src/widgets/lv_table.c",
    "$_lvgl_path/src/widgets/lv_textarea.c",
    "$_lvgl_path/src/extra/lv_extra.c",
    "$_lvgl_path/src/extra/layouts/flex/lv_flex.c",
    "$_lvgl_path/src/extra/layouts/grid/lv_grid.c",
    "$_lvgl_path/src/extra/libs/bmp/lv_bmp.c",
    "$_lvgl_path/src/extra/libs/ffmpeg/lv_ffmpeg.c",
    "$_lvgl_path/src/extra/libs/freetype/lv_freetype.c",
    "$_lvgl_path/src/extra/libs/fsdrv/lv_fs_fatfs.c",
    "$_lvgl_path/src/extra/libs/fsdrv/lv_fs_posix.c",
    "$_lvgl_path/src/extra/libs/fsdrv/lv_fs_stdio.c",
    "$_lvgl_path/src/extra/libs/fsdrv/lv_fs_win32.c",
    "$_lvgl_path/src/extra/libs/gif/lv_gif.c",
    "$_lvgl_path/src/extra/libs/png/lv_png.c",
    "$_lvgl_path/src/extra/libs/qrcode/lv_qrcode.c",
    "$_lvgl_path/src/extra/libs/rlottie/lv_rlottie.c",
    "$_lvgl_path/src/extra/libs/sjpg/lv_sjpg.c",
    "$_lvgl_path/src/extra/others/gridnav/lv_gridnav.c",
    "$_lvgl_path/src/extra/others/monkey/lv_monkey.c",
    "$_lvgl_path/src/extra/others/snapshot/lv_snapshot.c",
    "$_lvgl_path/src/extra/themes/basic/lv_theme_basic.c",
    "$_lvgl_path/src/extra/themes/default/lv_theme_default.c",
    "$_lvgl_path/src/extra/themes/mono/lv_theme_mono.c",
    "$_lvgl_path/src/extra/widgets/animimg/lv_animimg.c",
    "$_lvgl_path/src/extra/widgets/calendar/lv_calendar.c",
    "$_lvgl_path/src/extra/widgets/calendar/lv_calendar_header_arrow.c",
    "$_lvgl_path/src/extra/widgets/calendar/lv_calendar_header_dropdown.c",
    "$_lvgl_path/src/extra/widgets/chart/lv_chart.c",
    "$_lvgl_path/src/extra/widgets/colorwheel/lv_colorwheel.c",
    "$_lvgl_path/src/extra/widgets/imgbtn/lv_imgbtn.c",
    "$_lvgl_path/src/extra/widgets/keyboard/lv_keyboard.c",
    "$_lvgl_path/src/extra/widgets/led/lv_led.c",
    "$_lvgl_path/src/extra/widgets/list/lv_list.c",
    "$_lvgl_path/src/extra/widgets/menu/lv_menu.c",
    "$_lvgl_path/src/extra/widgets/meter/lv_meter.c",
    "$_lvgl_path/src/extra/widgets/msgbox/lv_msgbox.c",
    "$_lvgl_path/src/extra/widgets/span/lv_span.c",
    "$_lvgl_path/src/extra/widgets/spinbox/lv_spinbox.c",
    "$_lvgl_path/src/extra/widgets/spinner/lv_spinner.c",
    "$_lvgl_path/src/extra/widgets/tabview/lv_tabview.c",
    "$_lvgl_path/src/extra/widgets/tileview/lv_tileview.c",
    "$_lvgl_path/src/extra/widgets/win/lv_win.c",
    ]


lvgl_include_dirs = [
    "$_lvgl_path",
    "$_lvgl_path/src",
    "$_lvgl_path/src/misc",
    "$_lvgl_path/src/hal",
    "$_lvgl_path/src/core",
    "$_lvgl_path/src/font",
    "$_lvgl_path/src/widgets",
    "$_lvgl_path/src/draw",
    "$_lvgl_path/src/draw/sw",
    "$_lvgl_path/src/extra",
    "$_lvgl_path/src/extra/widgets",
    "$_lvgl_path/src/extra/widgets/animimg",
    "$_lvgl_path/src/extra/widgets/calendar",
    "$_lvgl_path/src/extra/widgets/chart",
    "$_lvgl_path/src/extra/widgets/colorwheel",
    "$_lvgl_path/src/extra/widgets/imgbtn",
    "$_lvgl_path/src/extra/widgets/keyboard",
    "$_lvgl_path/src/extra/widgets/led",
    "$_lvgl_path/src/extra/widgets/list",
    "$_lvgl_path/src/extra/widgets/menu",
    "$_lvgl_path/src/extra/widgets/meter",
    "$_lvgl_path/src/extra/widgets/msgbox",
    "$_lvgl_path/src/extra/widgets/span",
    "$_lvgl_path/src/extra/widgets/spinbox",
    "$_lvgl_path/src/extra/widgets/spinner",
    "$_lvgl_path/src/extra/widgets/tabview",
    "$_lvgl_path/src/extra/widgets/tileview",
    "$_lvgl_path/src/extra/widgets/win",
    "$_lvgl_path/src/extra/layouts",
    "$_lvgl_path/src/extra/layouts/flex",
    "$_lvgl_path/src/extra/layouts/grid",
    "$_lvgl_path/src/extra/libs",
    "$_lvgl_path/src/extra/libs/bmp",
    "$_lvgl_path/src/extra/libs/ffmpeg",
    "$_lvgl_path/src/extra/libs/freetype",
    "$_lvgl_path/src/extra/libs/fsdrv",
    "$_lvgl_path/src/extra/libs/gif",
    "$_lvgl_path/src/extra/libs/png",
    "$_lvgl_path/src/extra/libs/qrcode",
    "$_lvgl_path/src/extra/libs/rlottie",
    "$_lvgl_path/src/extra/libs/sjpg",
    "$_lvgl_path/src/extra/others",
    "$_lvgl_path/src/extra/others/gridnav",
    "$_lvgl_path/src/extra/others/monkey",
    "$_lvgl_path/src/extra/others/snapshot",
    "$_lvgl_path/src/extra/themes",
    "$_lvgl_path/src/extra/themes/basic",
    "$_lvgl_path/src/extra/themes/default",
    "$_lvgl_path/src/extra/themes/mono",
    ]
